Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
@@ -60,6 +60,11 @@
 
         function onMouseMove(e) {
           moveTo(e.pageX, e.pageY);
+          
+          ball.hidden = true;
+          const elemBelow = document.elementFromPoint(e.clientX, e.clientY);
+          ball.hidden = false;
+          console.log(elemBelow);
         }
 
         // centers the ball at (pageX, pageY) coordinates
