Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -33,6 +33,26 @@
 
     <script>
       const ball = document.getElementById("ball");
+
+      ball.onmousedown = function(e) {
+        const shiftX = e.clientX - ball.getBoundingClientRect().left;
+        const shiftY = e.clientY - ball.getBoundingClientRect().top;
+
+        ball.className = "dragging grabbing";
+        document.body.append(ball);
+
+        moveTo(e.clientX, e.clientY);
+
+        ball.onmouseup = function() {
+          ball.classList.remove("grabbing");
+          ball.onmouseup = null;
+        }
+
+        function moveTo(pageX, pageY) {
+          ball.style.left = pageX - shiftX + "px";
+          ball.style.top = pageY - shiftY + "px";
+        }
+      };
       
       ball.ondragstart = function() {
         return false;
