Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -58,6 +58,12 @@
 
         function onMouseMove(e) {
           moveTo(e.pageX, e.pageY);
+
+          ball.hidden = true;
+          const elemBelow = document.elementFromPoint(e.clientX, e.clientY);
+          ball.hidden = false;
+
+          
         }
       };
       
