Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -63,7 +63,9 @@
           const elemBelow = document.elementFromPoint(e.clientX, e.clientY);
           ball.hidden = false;
 
-          
+          if (!elemBelow) return;
+
+          const droppableBelow = elemBelow.closest(".droppable");
         }
       };
       
