Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -33,6 +33,7 @@
 
     <script>
       const ball = document.getElementById("ball");
+      let currentDroppable = null;
 
       ball.onmousedown = function(e) {
         const shiftX = e.clientX - ball.getBoundingClientRect().left;
