Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-2.html
@@ -70,7 +70,7 @@
 
           const droppableBelow = elemBelow.closest(".droppable");
 
-          if (currentDroppable !== droppableBelow) {
+          if (currentDroppable != droppableBelow) {
             if (currentDroppable) {
               leaveDroppable(currentDroppable);
             }
