--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -67,6 +67,13 @@
           if (!elemBelow) return;
 
           const droppableBelow = elemBelow.closest(".droppable");
+
+          if (droppableBelow) {
+            currentDroppable = droppableBelow;
+            currentDroppable.style.backgroundColor = "pink";
+          } else if (currentDroppable) {
+            currentDroppable.style.backgroundColor = "";
+          }
         }
       };
       
