Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-3.html
@@ -70,10 +70,18 @@
 
           if (droppableBelow) {
             currentDroppable = droppableBelow;
-            currentDroppable.style.backgroundColor = "pink";
+            enterDroppable(currentDroppable);
           } else if (currentDroppable) {
-            currentDroppable.style.backgroundColor = "";
+            leaveDroppable(currentDroppable);
           }
+        }
+
+        function enterDroppable(elem) {
+          elem.style.backgroundColor = "pink";
+        }
+
+        function leaveDroppable(elem) {
+          elem.style.backgroundColor = "";
         }
       };
       
