Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
@@ -70,13 +70,8 @@
 
           console.log(currentDroppable?.nodeName, droppableBelow?.nodeName);
 
-          if (droppableBelow) {
-            currentDroppable = droppableBelow;
-            enterDroppable(currentDroppable);
-            console.log("Entrou");
-          } else if (currentDroppable) {
-            console.log("Limpou");
-            leaveDroppable(currentDroppable);
+          if (droppableBelow !== currentDroppable) {
+            
           }
         }
 
