Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
@@ -68,10 +68,14 @@
 
           const droppableBelow = elemBelow.closest(".droppable");
 
-          console.log(currentDroppable?.nodeName, droppableBelow?.nodeName);
-
           if (droppableBelow !== currentDroppable) {
-            
+            if (currentDroppable) {
+              leaveDroppable(currentDroppable);
+            }
+            currentDroppable = droppableBelow;
+            if (currentDroppable) {
+              enterDroppable(currentDroppable);
+            }
           }
         }
 
