Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
@@ -50,6 +50,10 @@
           document.removeEventListener("mousemove", onMouseMove);
           ball.classList.remove("grabbing");
           ball.onmouseup = null;
+          
+          if (currentDroppable) {
+            console.log("Goal");
+          }
         };
 
         function moveTo(pageX, pageY) {
