Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/potential-drop-targets-droppables-4.html
@@ -50,13 +50,15 @@
           document.removeEventListener("mousemove", onMouseMove);
           ball.classList.remove("grabbing");
           ball.onmouseup = null;
-          
+
+          // On mouseup we can intellectually finalize the drop: change data, move elements around.
           if (currentDroppable) {
             console.log("Goal");
           }
         };
 
         function moveTo(pageX, pageY) {
+          // We can limit dragging by a certain area or direction.
           ball.style.left = pageX - shiftX + "px";
           ball.style.top = pageY - shiftY + "px";
         }
