--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
@@ -9,6 +9,17 @@
         margin: 5px;
         border-radius: 5px;
       }
+
+      .thumb {
+        width: 10px;
+        height: 25px;
+        background-color: blue;
+        position: relative;
+        border-radius: 3px;
+        cursor: pointer;
+        left: 10px;
+        top: -5px;
+      }
     </style>
   </head>
   <body>
