Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
@@ -33,9 +33,20 @@
 
     <script>
       const thumb = document.querySelector(".thumb");
+      const slider = document.getElementById("slider");
 
       thumb.onmousedown = function(e) {
+        const shiftX = e.clientX 
+          - thumb.getBoundingClientRect().left 
+          + slider.getBoundingClientRect().left;
+
         thumb.classList.add("grabbing");
+
+        moveTo(e.pageX);
+
+        function moveTo(pageX) {
+          thumb.style.left = pageX - shiftX + "px";
+        }
 
         thumb.onmouseup = function() {
           thumb.classList.remove("grabbing");
