Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider.html
@@ -45,6 +45,7 @@
 
         thumb.onmouseup = function() {
           thumb.classList.remove("grabbing");
+          document.removeEventListener("mousemove", onMouseMove);
         }
 
         function onMouseMove(e) {
