Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
@@ -27,7 +27,11 @@
     </div>
 
     <script>
-      console.log("ola");
+      const thumb = document.querySelector(".thumb");
+
+      thumb.onmousedown = function(e) {
+        console.log(e.type);
+      };
     </script>
   </body>
 </html>
