Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
@@ -30,7 +30,14 @@
       const thumb = document.querySelector(".thumb");
 
       thumb.onmousedown = function(e) {
-        console.log(e.type);
+        const shift = e.clientX - thumb.getBoundingClientRect().left;
+
+        document.addEventListener("mousemove", onMouseMove);
+
+        function onMouseMove(e) {
+          thumb.style.left = e.pageX - shift + "px";
+        }
+        console.log(shift);
       };
     </script>
   </body>
