Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
@@ -40,7 +40,13 @@
         };
 
         function onMouseMove(e) {
-          thumb.style.left = e.pageX - shift + "px";
+          let left = e.pageX - shift;
+
+          if (left < 0) {
+            left = 0;
+          }
+          console.log(left);
+          thumb.style.left = left + "px";
         }
       };
     </script>
