Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/slider-2.htm
@@ -45,7 +45,11 @@
           if (left < 0) {
             left = 0;
           }
-          console.log(left);
+
+          if (left > 300) {
+            left = 300;
+          }
+          
           thumb.style.left = left + "px";
         }
       };
