Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -44,9 +44,7 @@
 
     <img src="https://en.js.cx/clipart/ball.svg" class="draggable">
 
-    <div style="clear:both">
-      Ola
-    </div>
+    <div style="clear:both"></div>
     <script></script>
   </body>
 </html>
