Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style></style>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <h2>Place superheroes around the soccer field.</h2>
@@ -45,6 +50,7 @@
     <img src="https://en.js.cx/clipart/ball.svg" class="draggable">
 
     <div style="clear:both"></div>
+
     <script></script>
   </body>
 </html>
