Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -6,6 +6,21 @@
         margin: 0;
         padding: 0;
       }
+
+      .hero {
+        background: url(https://js.cx/drag-heroes/heroes.png);
+        width: 130px;
+        height: 128px;
+        float: left;
+      }
+
+      #hero1 {
+        background-position: 0 0;
+      }
+
+      #hero2 {
+        background-position: 0 -128px;
+      }
     </style>
   </head>
   <body>
