Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -12,6 +12,8 @@
         width: 130px;
         height: 128px;
         float: left;
+        background-color: lightcoral;
+        margin: 4px;
       }
 
       #hero1 {
@@ -20,6 +22,10 @@
 
       #hero2 {
         background-position: 0 -128px;
+      }
+
+      #hero3 {
+        background-position: -120px 0;
       }
     </style>
   </head>
