Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -27,6 +27,18 @@
       #hero3 {
         background-position: -120px 0;
       }
+
+      #hero4 {
+        background-position: -125px -128px;
+      }
+
+      #hero5 {
+        background-position: -248px -128px;
+      }
+
+      #hero6 {
+        background-position: -244px 0;
+      }
     </style>
   </head>
   <body>
