Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -39,6 +39,10 @@
       #hero6 {
         background-position: -244px 0;
       }
+
+      .draggable {
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
