Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -7,6 +7,13 @@
         padding: 0;
       }
 
+      #field {
+        background: url(field.svg);
+        float: left;
+        width: 800px;
+        height: 500px;
+      }
+
       .hero {
         background: url(https://js.cx/drag-heroes/heroes.png);
         width: 130px;
