Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -98,6 +98,17 @@
         if (!e.target.classList.contains("draggable")) {
           return;
         }
+        
+        const draggable = e.target;
+
+        const shiftX = e.clientX - draggable.getBoundingClientRect().left;
+        const shiftY = e.clientY - draggable.getBoundingClientRect().top;
+
+        document.body.append(draggable);
+        draggable.style.position = "absolute";
+        draggable.style.zIndex = 1000;
+
+        console.log(shiftX, shiftY);
       };
     </script>
   </body>
