Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -108,7 +108,12 @@
         draggable.style.position = "absolute";
         draggable.style.zIndex = 1000;
 
-        console.log(shiftX, shiftY);
+        moveTo(e.pageX, e.pageY);
+
+        function moveTo(pageX, pageY) {
+          draggable.style.left = pageX - shiftX + "px";
+          draggable.style.top = pageY - shiftY + "px";
+        }
       };
     </script>
   </body>
