Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -110,8 +110,12 @@
 
         draggable.addEventListener("mousemove", onMouseMove);
 
+        draggable.onmouseup = function(e) {
+          document.removeEventListener("mousemove", onMouseMove);
+        }
+
         function onMouseMove(e) {
-          console.log(e.type);
+          moveTo(e.pageX, e.pageY);
         }
 
         function moveTo(pageX, pageY) {
