--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -111,7 +111,8 @@
         draggable.addEventListener("mousemove", onMouseMove);
 
         draggable.onmouseup = function(e) {
-          document.removeEventListener("mousemove", onMouseMove);
+          console.log("up");
+          draggable.removeEventListener("mousemove", onMouseMove);
         }
 
         function onMouseMove(e) {
