Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -130,6 +130,9 @@
         }
 
         function onMouseMove(e) {
+          if (draggable.getBoundingClientRect().top < 0 && window.scrollY > 0) {
+            window.scrollBy(0, -10);
+          }
           moveTo(e.clientX, e.clientY);
         }
 
